# Chandra-OCR-sagemaker-Images

./: deploy.py
sagemaker/: DEPLOY_FROM_LOCAL_LINUX.md  check_logs.py  deploy_custom_docker_linux.py  list_endpoints.py
sagemaker/chandra-master/: .gitignore  .pre-commit-config.yaml  LICENSE  MODEL_LICENSE  README.md  pyproject.toml  pytest.ini
sagemaker/chandra-master/.github/workflows/: integration.yml  publish.yml
sagemaker/chandra-master/chandra/: input.py  output.py  prompts.py  settings.py  util.py
sagemaker/chandra-master/chandra/model/: __init__.py  hf.py  schema.py  util.py  vllm.py
sagemaker/chandra-master/chandra/scripts/: app.py  cli.py  run_app.py  screenshot_app.py  vllm.py
sagemaker/chandra-master/chandra/scripts/templates/: screenshot.html
sagemaker/chandra-master/tests/: conftest.py
sagemaker/chandra-master/tests/integration/: test_image_inference.py
sagemaker/code/: inference.py  requirements.txt
sagemaker/sagemaker/: README.md  SAGEMAKER_FOLDER_ORGANIZATION.md  deploy_custom_docker_linux.py
sagemaker/sagemaker-custom-image/: Dockerfile  app.py  requirements.txt  serve  serve.sh
sagemaker/sagemaker-custom-image/src/: __init__.py  inference.py
sagemaker/sagemaker/sagemaker-custom-image/: Dockerfile  requirements.txt  serve
sagemaker/sagemaker/sagemaker-custom-image/src/: inference.py
